<resources>
    <string name="app_name">MBDS NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="start_date">Start Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="save">Save</string>
    <string name="news_desk">News Desk</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>

</resources>
