<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.cwong.nytimessearch.fragments.SettingsFragment">
    <FrameLayout
    android:id="@+id/child_fragment_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/start_date"
    android:id="@+id/tvStartDate"
    android:layout_below="@+id/child_fragment_container"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

    <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="date"
    android:ems="10"
    android:id="@+id/etDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/spinnerSort"
        android:layout_alignStart="@+id/spinnerSort" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:id="@+id/tvSortOrder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/etDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp" />

    <Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/spinnerSort"
    android:entries="@array/sort_array"
        android:layout_below="@+id/etDate"
        android:paddingTop="10dp"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/news_desk"
    android:id="@+id/tvNewsDesk"
    android:layout_below="@+id/spinnerSort"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

    <CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/arts"
    android:id="@+id/cbArts"
    android:checked="false"
    android:layout_below="@+id/spinnerSort"
    android:layout_alignLeft="@+id/cbFashionStyle"
    android:layout_alignStart="@+id/cbFashionStyle" />

    <CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fashion_style"
    android:id="@+id/cbFashionStyle"
    android:checked="false"
    android:layout_below="@+id/cbArts"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />

    <CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sports"
    android:id="@+id/cbSports"
    android:checked="false"
    android:layout_below="@+id/cbFashionStyle"
    android:layout_alignLeft="@+id/cbFashionStyle"
    android:layout_alignStart="@+id/cbFashionStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSaveSettings"
        android:layout_marginBottom="93dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/spinnerSort"
        android:layout_alignEnd="@+id/spinnerSort" />


</RelativeLayout>
